--- a/hello.html
+++ b/hello.html
@@ -1,13 +1,71 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>>
-		<h1>My new App</h1>
-	</title>
-</head>
-<body>
+	<head>
+		<title>>
+			<h1>My new App</h1>
+		</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<<!-- style type="text/css">
+			h2 {
+				color: red;
+				text-align: center;
+				font-size: 40;
 
-<h2>we are just saying hello world, maybe something more,maybe another hello</h2>
+			}
+		</style> -->
+	</head>
+	<body>
 
-</body>
+		<h2>we are just saying hello world, maybe something more,maybe another hello</h2>
+		<!-- <h1 style="color: blue">here is another style</h1> -->
+		<ul>
+			<li>1</li>
+			<li>2</li>
+			<li>3</li>
+			<li>4</li>
+		</ul>
+
+		<ol>
+			<li>1</li>
+			<li>2</li>
+			<li>3</li>
+			<li>4</li>
+		</ol>
+
+		<img src="car1.jpg" width="40%">
+		<h1>A table</h1>
+		<div>
+		<table>
+			<tr>
+				<th> Head 1</th>
+				<th> Head 2</th>
+				<th> Head 3</th>
+			</tr>
+			<tr>
+				<td>1</td>
+				<td>2</td>
+				<td>3</td>
+			</tr>
+			<tr>
+				<td>1</td>
+				<td>2</td>
+				<td>3</td>
+			</tr>
+			<tr>
+				<td>1</td>
+				<td>2</td>
+				<td>3</td>
+			</tr>
+		</table>
+	</div>
+		
+		<h1> A Form </h1>
+		<form>
+			<input type="text" name="name" placeholder="name of people">
+			<input type="text" name="address" placeholder="Address">
+			<input type="text" name="phone" placeholder="phone">
+			<button>§submit</button>
+		</form>
+
+	</body>
 </html>
